@@ -1,0 +1,86 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Model API Request</title>
+</head>
+<body>
+<h1>Model API Request</h1>
+<div>
+  <label for="prompt">Enter your prompt:</label><br>
+  <input type="text" id="prompt" rows="4" cols="50" value="explain me FTP"/>
+</div>
+<button onclick="sendRequest()">Send Request</button>
+<div id="response-container"></div>
+<script type="module" src="../node_modules/marked/marked.min.js"></script>
+
+<script>
+  let streamReader;
+
+  async function sendRequest() {
+    const prompt = document.getElementById('prompt').value + "(maximum 80 words)";
+    const requestData = {
+      model: "deepseek-coder:6.7b",
+      prompt: prompt,
+      stream: true
+    };
+
+    try {
+      const response = await fetch('http://localhost:11434/api/generate', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(requestData)
+      });
+
+      streamReader = response.body.getReader();
+      readStream();
+    } catch (error) {
+      console.error('Error:', error);
+    }
+  }
+
+async function readStream() {
+  const responseContainer = document.getElementById('response-container');
+  responseContainer.innerHTML = '<h2>Response:</h2>';
+  const responseText = document.createElement('div');
+  responseContainer.appendChild(responseText);
+
+
+  let accumulatedResponse = '';
+    let tot = "";
+  while (true) {
+    const { done, value } = await streamReader.read();
+    if (done) {
+      break;
+    }
+
+    const chunk = new TextDecoder().decode(value);
+    const parsedObject = JSON.parse(chunk);
+    const response = parsedObject.response;
+    tot += response ;
+    accumulatedResponse += chunk;
+
+    // Check if the chunk ends with a newline character
+    if (chunk.endsWith('\n')) {
+      try {
+        //const parsedChunk = JSON.parse(accumulatedResponse);
+        //responseText.textContent = parsedChunk.response || ''; // Extract the response field
+        responseText.innerHTML = marked.parse(tot);     
+        // accumulatedResponse = ''; // Reset accumulated response
+      } catch (error) {
+        console.error('Error parsing JSON:', error);
+      }
+    }
+  }
+  console.log(tot)
+  tot = '';
+
+}
+</script>
+
+</body>
+</html>
