@@ -1,0 +1,1 @@
+FROM ./models/deepseek-coder-6.7b-instruct.Q4_K_M.gguf
