@@ -1,3 +1,6 @@
 https://github.com/abetlen/llama-cpp-python
 https://python.langchain.com/docs/integrations/llms/llamacpp
-deepseek-coder-6.7b-instruct.Q4_K_M.gguf
+https://xtermjs.org/
+https://github.com/ollama/ollama
+https://www.npmjs.com/package/ssh2
+./models/deepseek-coder-6.7b-instruct.Q4_K_M.gguf
