@@ -20,6 +20,8 @@
     <!-- <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script> -->
 
     <script src="./node_modules/socket.io/client-dist/socket.io.min.js"></script>
+    <script type="module" src="./node_modules/marked/marked.min.js"></script>
+    <script defer src="ai.js"></script>
     <script defer src="app.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -77,7 +79,6 @@
             <div id="collapseSSH" class="accordion-collapse collapse show" data-bs-parent="#accordion1">
                 <div class="accordion-body">
                     <form id="login-form" class="container p-3">
-
                         <div class="row shadow-sm rounded-4 p-3 border border-secondary">
                             <h2 class="display-5 text-center mb-3"> SSH Connection</h2>
                             <div class="col-md-6 bg-body-tertiary p-4 rounded-4 border border-secondary-subtle">
@@ -90,7 +91,7 @@
                                     <div class="col-6 mb-3">
                                         <label for="ip" class="form-label">IP Address:</label>
                                         <input type="text" id="ip" class="form-control" placeholder="Enter IP Address"
-                                            value="192.168.139.129" />
+                                            value="192.168.186.128" />
                                     </div>
                                 </div>
                                 <div class="row g-2">
@@ -143,41 +144,54 @@
             </h2>
             <div id="collapseTerminal" class="accordion-collapse collapse" data-bs-parent="#accordion1">
                 <div class="accordion-body">
-                    <div class="mb-3">
-                        <button type="button" onclick="openTerminal()" id="open-terminal-btn" class="btn btn-secondary"
-                            disabled>
-                            Open Terminal
-                        </button>
-                        <button type="button" onclick="closeTerminal()" id="close-terminal-btn"
-                            class="btn btn-secondary" disabled>
-                            Close Terminal
-                        </button>
-                        <button type="button" onclick="testCommand()" id="command" class="btn btn-warning">
-                            Command
-                        </button>
-                        <button type="button" onclick="testCopy('hello.sh')" id="execute" class="btn btn-warning">
-                            Hello
-                        </button>
+                    <div class="row g-2">
+                        <div class="col-6">
+                            <div class="mb-3">
+                                <button type="button" onclick="openTerminal()" id="open-terminal-btn" class="btn btn-secondary"
+                                    disabled>
+                                    Open Terminal
+                                </button>
+                                <button type="button" onclick="closeTerminal()" id="close-terminal-btn"
+                                    class="btn btn-secondary" disabled>
+                                    Close Terminal
+                                </button>
+                                <button type="button" onclick="testCommand()" id="command" class="btn btn-warning">
+                                    Command
+                                </button>
+                                <button type="button" onclick="testCopy('hello.sh')" id="execute" class="btn btn-warning">
+                                    Hello
+                                </button>
+                            </div>
+                                <div class="mb-3 shadow" style="max-width: 1080px; max-height:460px" id="terminal-container" hidden></div> <!-- style="max-width: 1080px; max-height:460px" -->
+                            
+                                <div class="col-3 mb-3">
+                                <label for="searchTxt" class="form-label">search text:</label>
+                                <input id="searchTxt" type="text" placeholder="Find" class="form-control col-md-3">
+                            </div>
+                            
+                            <div class="mb-3">
+                                <label class="form-check-label"> <input type="checkbox" class="form-check-input"
+                                        id="matchCaseChb"> &nbsp Match Case</label>
+                            </div>
+                            <button type="button" class="btn btn-secondary"
+                                onclick="searchAddon.findNext(document.getElementById('searchTxt').value,{caseSensitive: document.getElementById('matchCaseChb').checked })">Find
+                                Next</button>
+                            <button type="button" class="btn btn-secondary"
+                                onclick="searchAddon.findPrevious(document.getElementById('searchTxt').value,{caseSensitive: document.getElementById('matchCaseChb').checked })">Find
+                                Previous</button>
+                            <button type="button" class="btn btn-secondary" onclick="toggleFullScreen();">Toggle
+                                Fullscreen</button>  
+                        </div>
+                        <div class="col-6 mb-3">
+                            <div class="mb-3">
+                                <label for="prompt" class="form-label">Enter your prompt:</label><br>
+                                <input class="form-control" type="text" id="prompt" rows="4" cols="50" value="explain me FTP"/>
+                            </div>
+                              <button type="button" onclick="sendRequest()" class="btn btn-secondary " >Send Request</button>
+                              <div id="response-container"></div>
+                        </div>
                     </div>
-                        <div class="mb-3 shadow" style="max-width: 1080px; max-height:460px" id="terminal-container" hidden></div> <!-- style="max-width: 1080px; max-height:460px" -->
-                    
-                        <div class="col-3 mb-3">
-                        <label for="searchTxt" class="form-label">search text:</label>
-                        <input id="searchTxt" type="text" placeholder="Find" class="form-control col-md-3">
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label class="form-check-label"> <input type="checkbox" class="form-check-input"
-                                id="matchCaseChb"> &nbsp Match Case</label>
-                    </div>
-                    <button type="button" class="btn btn-secondary"
-                        onclick="searchAddon.findNext(document.getElementById('searchTxt').value,{caseSensitive: document.getElementById('matchCaseChb').checked })">Find
-                        Next</button>
-                    <button type="button" class="btn btn-secondary"
-                        onclick="searchAddon.findPrevious(document.getElementById('searchTxt').value,{caseSensitive: document.getElementById('matchCaseChb').checked })">Find
-                        Previous</button>
-                    <button type="button" class="btn btn-secondary" onclick="toggleFullScreen();">Toggle
-                        Fullscreen</button>   
+                     
                 </div>
             </div>
 
